<resources>
    <string name="app_name">MyAPPV</string>
    <string name="add">Add</string>
    <string name="hint_first">First name</string>
    <string name="hint_last">Last name</string>
    <string name="hint_phone">Phone</string>
    <string name="search_first">Search by first name</string>
    <string name="search_last">Search by last name</string>
    <string name="search_phone">Search by phone</string>

    <string name="education">Education</string>
    <string name="hobbies">Hobbies</string>

    <string-array name="education_levels">
        <item>HighSchool</item>
        <item>Bachelor</item>
        <item>Master</item>
        <item>PhD</item>
    </string-array>
</resources>